--- a/workflow/nextflow.config
+++ b/workflow/nextflow.config
@@ -2,9 +2,8 @@ docker {
     enabled = true
 }
 
+params.reference_fasta = '/betelgeuse10/analysis/utsu/resources/SpliceAI/hg19_v0_Homo_sapiens_assembly19.fasta'
+params.annotation_gtf = '/betelgeuse10/analysis/utsu/resources/SpliceAI/grch37.txt'
 
-params.reference_fasta = '/betelgeuse07/analysis/utsu/resources/SpliceAI/hg19_v0_Homo_sapiens_assembly19.fasta'
-params.annotation_gtf = '/betelgeuse07/analysis/utsu/resources/SpliceAI/grch37.txt'
-
-params.vep_data = '/betelgeuse04/analysis/utsu/resources/vep/vep_data'
-// params.vep_plugins = '/betelgeuse04/analysis/utsu/resources/vep/plugin_resources'
+params.vep_data = '/betelgeuse10/analysis/utsu/resources/vep/vep_data'
+params.vep_plugin_resources = '/betelgeuse10/analysis/utsu/resources/vep/plugin_resources'
