--- a/workflow/nextflow.config
+++ b/workflow/nextflow.config
@@ -1,9 +1,22 @@
+params {
+    reference = '/betelgeuse10/analysis/utsu/resources/SpliceAI/hg19_v0_Homo_sapiens_assembly19.fasta'
+    reference_index = '/betelgeuse10/analysis/utsu/resources/SpliceAI/hg19_v0_Homo_sapiens_assembly19.fasta'
+    annotation_gtf = '/betelgeuse10/analysis/utsu/resources/SpliceAI/grch37.txt'
+    vep_data = '/betelgeuse10/analysis/utsu/resources/vep/vep_data'
+    vep_plugin_resources = '/betelgeuse10/analysis/utsu/resources/vep/plugin_resources'
+}
+process {
+    executor = 'local'
+    withName: 'SPLICEAI' {
+        container = 'betelgeuse:5000/library/utsu/spliceai:1.3.1'
+        containerOptions = "--security-opt seccomp=unconfined"
+        queue = 'centauri.q,deepspace.q'
+    }
+    // withName: 'VEP' {
+    //     queue = 'centauri.q'
+    // }
+}
+
 docker {
     enabled = true
 }
-
-params.reference_fasta = '/betelgeuse10/analysis/utsu/resources/SpliceAI/hg19_v0_Homo_sapiens_assembly19.fasta'
-params.annotation_gtf = '/betelgeuse10/analysis/utsu/resources/SpliceAI/grch37.txt'
-
-params.vep_data = '/betelgeuse10/analysis/utsu/resources/vep/vep_data'
-params.vep_plugin_resources = '/betelgeuse10/analysis/utsu/resources/vep/plugin_resources'
